Update to Spring Boot 2.3.0 and Java 11