@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.4.RELEASE</version>
+    <version>2.3.0.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>org.eu.rubensa.uniovi</groupId>
@@ -14,9 +14,9 @@
   <description>Plataforma web para la gestión de reservas de aulas y espacios comunes</description>
 
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
 
-    <maven.version>3.3.9</maven.version>
+    <maven.version>3.6.3</maven.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -26,12 +26,16 @@
     <maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
     <maven-jxr-plugin.version>3.0.0</maven-jxr-plugin.version>
     <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
-    <maven-pmd-plugin.version>3.11.0</maven-pmd-plugin.version>
+    <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
     <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
     <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
     <site-maven-plugin.version>0.12</site-maven-plugin.version>
     <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
-    <heroku-maven-plugin.verion>2.0.16</heroku-maven-plugin.verion>
+    <heroku-maven-plugin.verion>3.0.2</heroku-maven-plugin.verion>
+    <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+    <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
 
     <!-- Spring Boot doesn't have this property... so, this is needed -->
     <maven-surefire-report-plugin.version>3.0.0-M4</maven-surefire-report-plugin.version>
@@ -124,6 +128,11 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>${maven-site-plugin.version}</version>
+        </plugin>
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
@@ -239,6 +248,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!-- Allow all reflection access for third party libraries -->
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+
           <!-- Redirect JBoss logging to SLF4J -->
           <systemPropertyVariables>
             <org.jboss.logging.provider>slf4j</org.jboss.logging.provider>
@@ -265,6 +279,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <!-- Allow all reflection access for third party libraries -->
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -516,6 +536,7 @@
         <artifactId>heroku-maven-plugin</artifactId>
         <configuration>
           <appName>rubensa-reservas-server</appName>
+          <jdkVersion>11</jdkVersion>
           <processTypes>
             <web>java $JAVA_OPTS -jar -Dserver.port=$PORT ${full-artifact-name}</web>
           </processTypes>
